# leizilla

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_CONNECTORS.md  IMPLEMENTATION.md  Justfile  PROPOSTA_INTERNET_ARCHIVE.md  README.md  TODO.md  Todo.md  justfile  pyproject.toml  repomix-causaganha-for-inpiration.xml  repomix-output-franklinbaldo-causaganha (1).xml  rondonia_leis.duckdb  test_ia.py  test_perm.py  test_rondonia_e2e.py  test_rondonia_leis.duckdb
.claude/: settings.local.json
.github/actions/notify-run-failure/: action.yml
.github/workflows/: _temp-go-live-dispatch.yml  _temp-smoke-test.yml  _temp-verify-claude-routine.yml  check-credentials.yml  claude-routine.yml  deploy-web.yml  discover-harvest.yml  lint.yml  parse-release.yml  rondonia_crawler.yml  schema-validate.yml  tmp-preflight-hardfail.yml  tmp-smoke-batch.yml  wayback-save.yml
data/opf/: label_space.json
data/opf/gold/: .gitkeep  manifest.json  test.jsonl  train.jsonl  val.jsonl
docs/: DEVELOPMENT.md  PRD.md  SCHEMA.md  audit-divergencias.md  ditel-ingestion.md  opf-finetune.md
docs/adr/: 0001-projeto-estatico-duckdb-torrent.md  0002-frontend-estatico-vanilla.md  0003-schema-duckdb-leis.md  0004-avaliacao-dlt.md  0004-separacao-engine-site-uvx.md  0004-wayback-fetch-path.md  0005-ia-identifiers.md  0006-xsd-checker.md  0007-lexml-export.md  0008-robots-rate-limit.md  0009-lgpd-etica.md  0010-raw-content-addressed-parsed-urn.md  0011-raw-identity-keyed-range-items.md  0012-opf-structural-span-tagging.md  ADR-0004-internet-archive-backend.md  ADR-0005-framework-conectores-modulares.md
docs/archive/: MANAGER-INTEL.md  MASTERPLAN.md  PROPOSTA_INTERNET_ARCHIVE.md
docs/okf/: index.md  invariants.md  log.md
docs/okf/discovery/: head-check.md  strategies.md
docs/okf/fontes/: ro-assembleia.md  ro-casacivil.md
docs/okf/llm/: litellm.md  parse-contract.md
docs/okf/naming/: chaves.md  identifiers.md  url-resolution.md
docs/okf/pipeline/: consolidate.md  discover.md  overview.md  parse.md  release-dataset.md  scrape.md
docs/okf/storage/: duckdb.md  internet-archive.md  range-buckets.md
docs/plans/: 01_CONTRIBUTING.md  02_UNIT_TESTING_STRATEGY.md  03_CI_SETUP.md  05_QUICKSTART_GUIDE.md  06_INTERNATIONALIZATION_STRATEGY.md  07_CODE_REFACTORING_GUIDELINES.md  08_LOGGING_STRATEGY.md  09_PROJECT_ROADMAP.md  10_PERFORMANCE_OPTIMIZATION_STRATEGY.md  LEIZILLA_SITE_IMPLEMENTATION_PLAN.md  MASTERPLAN.md  PROPOSTA_INTERNET_ARCHIVE.md
docs/rfc/: 0001-pipeline-e-convencoes.md  0002-governanca-documental.md  0003-convergencia-scrape-harvest.md  0004-go-live-rondonia.md  0005-higiene-e-cobertura.md  0006-llm-provider-agnostico-litellm.md
docs/routines/: maintenance-prompt.md
docs/schemas/: leizilla-v0.1.xsd
notebooks/: README.md  opf_train_colab.ipynb
scripts/: backup_database.py  check_schema_consistency.py  leizilla-to-lexml.xsl  opf_annotate.py  rondonia_dlt_pipeline.py  run_rondonia_crawler.py  verify_web.py
src/: __init__.py  cli.py  config.py  crawler.py  logging_utils.py  publisher.py  storage.py
src/connectors/: base.py  rondonia.py
src/dlt_pipelines/: rondonia.py
src/leizilla/: __init__.py  cli.py  config.py  crawler.py  discovery.py  doctor.py  entes.py  etl.py  ia_utils.py  ocr.py  opf.py  parser.py  publisher.py  ratelimit.py  robots.py  scraper.py  segmenter.py  storage.py  synthetic.py  wayback.py
src/leizilla/fontes/: __init__.py  federal.py  ro.py  sp.py
src/leizilla/manifests/: ro.json
tests/: test_casacivil_discovery.py  test_cli_bundle.py  test_cli_parse.py  test_cli_reconcile.py  test_config.py  test_crawler.py  test_discovery.py  test_ditel.py  test_dlt_pipeline.py  test_doctor.py  test_e2e_rondonia.py  test_entes.py  test_etl.py  test_fetch_all_parsed.py  test_fontes_stubs.py  test_harvest_pipeline.py  test_ia_utils.py  test_lexml_export.py  test_ocr.py  test_opf.py  test_parser.py  test_planalto_pipeline.py  test_publisher.py  test_publisher_dataset.py  test_reconcile.py  test_robots.py  test_rondonia_e2e.py  test_rondonia_lc_manifest.py  test_schema_consistency.py  test_scrape_skip_existing.py  test_scraper.py  test_segmenter.py  test_storage.py  test_synthetic.py  test_wayback.py  test_workflow_hygiene.py
tests/connectors/: test_connector_rondonia.py
tests/fixtures/: casacivil_index.html
tests/fixtures/leizilla_xml/: README.md  simple.xml  with-alteracoes.xml  with-alterations.xml  with-bloco-livre.xml  with-blocos-organizacionais.xml  with-ocr-ruim.xml  with-parse-parcial.xml  with-revogacao-cascata.xml  with-revogacao-total.xml  with-revogacoes.xml
tests/fixtures/lexml/: README.md  lexml-base.xsd  lexml-br-rigido.xsd  mathml2.xsd
web/: astro.config.mjs  package-lock.json  package.json
web/public/: versoes.parquet
web/src/: env.d.ts
web/src/components/: DatasetUnavailable.svelte  LeiCard.svelte  LeiDetail.svelte  LeiSearch.svelte  LeiSearchUI.svelte
web/src/components/cobertura/: CoberturaPanel.svelte
web/src/components/home/: HomePanel.svelte
web/src/components/lei/: Dados.svelte  DispositivoTree.svelte  Evidencias.svelte  LeiPage.svelte  Versoes.svelte  model.ts
web/src/layouts/: Layout.astro
web/src/lib/: db.ts  format.ts
web/src/pages/: cobertura.astro  index.astro  lei.astro
