[project]
name = "leizilla"
version = "0.1.0"
description = "O dinossauro que devora PDFs jurídicos e cospe dados abertos."
authors = [
    { name = "Franklin Silveira Baldo", email = "franklinbaldo@gmail.com" }
]
license = {text = "MIT"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Operating System :: OS Independent",
]
dependencies = [
    "playwright",
    "anyio",
    "duckdb",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
]

# [project.scripts] # Removing placeholder for now
# leizilla = "leizilla:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# Using ruff's defaults, can be configured further if needed.
# select = ["E", "F", "W", "I001", "UP", "S"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-string-normalization = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
# strict = true # Enable progressively
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
