[project]
name = "leizilla"
version = "0.1.0"
description = "O dinossauro que devora PDFs jurídicos e cospe dados abertos."
authors = [
    { name = "Franklin Silveira Baldo", email = "franklinbaldo@gmail.com" }
]
license = {text = "MIT"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Operating System :: OS Independent",
]
dependencies = [
    "litellm",
    "anyio",
    "beautifulsoup4",
    "duckdb",
    "internetarchive",
    "playwright",
    "python-dotenv",
    "requests",
    "typer",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "types-requests",
]

[project.scripts]
leizilla = "leizilla.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# select = ["E", "F", "W", "I001", "UP", "S"] # Example selection
# For now, using ruff's defaults which are generally good.
# Can be more specific later if needed.

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
# strict = true # Can be enabled progressively
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["litellm", "litellm.*"]
follow_imports = "skip"



[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "types-requests>=2.33.0.20260518",
]
